--- a/www/index.html
+++ b/www/index.html
@@ -3,17 +3,17 @@ layout: home
 title: DERIVA Site Template
 ---
 
-<h1> Welcome to DERIVA </h1>
+<h1> Welcome to LLM4ISI </h1>
 
 <div class="container id=home">
 
   <h2> About </h2>
 
-  This is the data catalog for the Project.<br/><br/>
+  This is the data catalog for the LLM4ISI Project.<br/><br/>
 
   <h2> Accessing </h2>
 
-  This project is a closed environment. Users need to belong to one of the following groups to access project data.
+  The LLM4ISI project is a closed environment. Users need to belong to one or more groups to access project data.
   Please follow the instructions at <a href=docs/accessing-resources>Joining GLOBUS groups</a> to join a group.
 
 </div>
