Add initial chaise-config with navbar menus. Update groups doc with group IDs.

--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@ layout: home
 title: DERIVA Site Template
 ---
 
-<h1> Welcome to LLM4ISI </h1>
+<h1> Welcome to LLM4ISI </h1> <br/>
 
 <div class="container id=home">
 
