Update annotation and add doc links back. Add embedded lucid chart ER diagram.

--- a/www/index.html
+++ b/www/index.html
@@ -11,6 +11,11 @@ title: DERIVA Site Template
 
   This is the data catalog for the LLM4ISI Project.<br/><br/>
 
+  <h2> LLM4ISI Data Model </h2>
+  <div style="width: 100%; margin: 10px; position: relative;">
+    <iframe allowfullscreen frameborder="0" style="width:640px; height:480px" src="https://lucid.app/documents/embedded/28d9eab3-6c4c-4c65-9c2d-57a03df34b79" id="5MXO7EwEw5n5"></iframe>
+  </div>
+
   <h2> Accessing </h2>
 
   The LLM4ISI project is a closed environment. Users need to belong to one or more groups to access project data.
